--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,3 +18,6 @@ click = "^7.1.2"
 [build-system]
 requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
+
+[tool.poetry.scripts]
+hmpy = "hmpy.console:main"
